@@ -24,6 +24,92 @@
 #include "debug_printf.h"
 #include "libmpd.h"
 
+typedef struct _MpdObj 
+{
+	/* defines if we are connected */
+	/* This should be made true if and only if the connection is up and running */
+	short int 	connected;
+	/* information needed to connect to mpd */
+	char 		*hostname;
+	int 		port;
+	char 		*password;
+	float 		connection_timeout;
+
+	/* mpd's structures */
+	mpd_Connection 	*connection;
+	mpd_Status 	*status;
+	mpd_Stats 	*stats;
+	mpd_Song 	*CurrentSong;
+
+	/* information needed to detect changes on mpd's side */
+	long long 	playlistid;
+	int 		songid;
+	int 		state;
+	unsigned long	dbUpdateTime;	
+	int updatingDb;
+	
+	
+	/* functions to call */
+	void *(* playlist_changed)(struct _MpdObj *mi, int old_playlist_id, int new_playlist_id, void *pointer);	
+	void *playlist_changed_pointer;
+	/* error signal */
+	void *(* error_signal)(struct _MpdObj *mi, int id, char *msg, void *pointer);	
+	void *error_signal_pointer;
+	/* song change */
+	void *(* song_changed)(struct _MpdObj *mi, int old_song_id, int new_song_id, void *pointer);	
+	void *song_changed_signal_pointer;                                                     	
+	/* song status changed */
+	void *(* status_changed)(struct _MpdObj *mi, void *pointer);	
+	void *status_changed_signal_pointer;                                                     	
+	/* song status changed */
+	void *(* state_changed)(struct _MpdObj *mi,int old_state,int new_state, void *pointer);	
+	void *state_changed_signal_pointer;                                                     	
+
+	/* disconnect signal */
+	void *(* disconnect) (struct _MpdObj *mi, void *pointer);
+	void *disconnect_pointer;
+
+	/* connect signal */
+	void *(* connect) (struct _MpdObj *mi, void *pointer);
+	void *connect_pointer;
+	
+	/* error message */
+	int error;
+	char *error_msg;	
+
+	/* song datab update */
+	void *(* database_changed)(struct _MpdObj *mi,void *pointer);	
+	void *database_changed_signal_pointer;                                                     	
+
+	void *(* updating_changed)(struct _MpdObj *mi, int updating,void *pointer);
+	void *updating_signal_pointer;
+
+	
+
+	/* internal values */
+	/* this "locks" the connections. so we can't have to commands competing with eachother */
+	short int connection_lock;
+
+	/* queue */
+	MpdQueue *queue;
+
+}_MpdObj;
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 int mpd_ob_stats_check(MpdObj *mi);
 
 enum {
